[package]
name = "rootvg"
version = "0.3.0"
description = "A 2D vector graphics library for wgpu based on nanovg"
readme = "README.md"
edition = "2021"
authors = ["Billy Messenger <60663878+BillyDM@users.noreply.github.com>"]
license = "MIT"
homepage = "https://github.com/MeadowlarkDAW/rootvg"
documentation = "https://docs.rs/rootvg"
repository = "https://github.com/MeadowlarkDAW/rootvg"
categories = ["graphics", "rendering", "rendering::engine"]
keywords = ["vector", "graphics", "gpu", "2d"]

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
all-features = true

[features]

[dependencies]
log = "0.4.21"
wgpu = { version = "22", default-features = false, features = ["wgsl"] }

[dev-dependencies]
winit = { version = "0.30.0" }
wgpu = { version = "22", default-features = true }
pollster = "0.3.0"