[package]
name = "rootvg-core"
version = "0.3.0"
description = "Core library for RootVG"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["gradient"]
gradient = ["dep:half"]
serde = ["dep:serde", "rgb/serde", "euclid/serde"]

[dependencies]
wgpu.workspace = true
rgb.workspace = true
log.workspace = true
euclid.workspace = true
bytemuck.workspace = true
half = { workspace = true, optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }