[package]
name = "rootvg-image"
version = "0.3.0"
description = "Image primitive for RootVG"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["web-colors"]
serde = ["rootvg-core/serde"]
# Enables broken "sRGB linear" blending to reproduce color management of the Web.
# Recommended for better text legibility.
# See: https://github.com/iced-rs/iced/pull/1888
#      https://github.com/pop-os/cosmic-text/issues/195
web-colors = ["rootvg-core/web-colors"]

[dependencies]
rootvg-core = { version = "0.3", path = "../rootvg-core", default-features = false }
wgpu.workspace = true
thiserror.workspace = true
bytemuck.workspace = true
rustc-hash.workspace = true
smallvec.workspace = true
image = { version = "0.25.0", default-features = false }