[package]
name = "rootvg-mesh"
version = "0.3.0"
description = "Mesh primitives for RootVG"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
gradient = ["rootvg-core/gradient"]
serde = ["rootvg-core/serde"]

[dependencies]
rootvg-core = { version = "0.3", path = "../rootvg-core", default-features = false }
wgpu.workspace = true
thiserror.workspace = true
bytemuck.workspace = true