[package]
name = "rootvg-msaa"
version = "0.2.1"
description = "MSAA antialiasing for RootVG"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rootvg-core = { version = "0.2", path = "../rootvg-core", default-features = false }
wgpu.workspace = true
thiserror.workspace = true
bytemuck.workspace = true
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }