[package]
name = "rootvg-quad"
version = "0.2.0"
description = "Quad primitives for RootVG"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["gradient"]
gradient = ["rootvg-core/gradient"]

[dependencies]
rootvg-core = { version = "0.2", path = "../rootvg-core", default-features = false }
wgpu.workspace = true
thiserror.workspace = true
bytemuck.workspace = true