[package]
name = "rootvg-quad"
version = "0.3.0"
description = "Quad primitives for RootVG"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["gradient", "web-colors"]
gradient = ["rootvg-core/gradient"]
serde = ["dep:serde", "rootvg-core/serde"]
# Enables broken "sRGB linear" blending to reproduce color management of the Web.
# Recommended for better text legibility.
# See: https://github.com/iced-rs/iced/pull/1888
#      https://github.com/pop-os/cosmic-text/issues/195
web-colors = ["rootvg-core/web-colors"]

[dependencies]
rootvg-core = { version = "0.3", path = "../rootvg-core", default-features = false }
wgpu.workspace = true
thiserror.workspace = true
bytemuck.workspace = true
bitflags.workspace = true
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }