[package]
name = "rootvg-tessellation"
version = "0.1.0"
description = "Tessellate paths into a RootVG mesh primitive"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["gradient"]
gradient = ["rootvg-core/gradient", "rootvg-mesh/gradient"]

[dependencies]
rootvg-core = { version = "0.1", path = "../rootvg-core", default-features = false }
rootvg-mesh = { version = "0.1", path = "../rootvg-mesh", default-features = false }
wgpu.workspace = true
thiserror.workspace = true
lyon = "1.0.1"