[package]
name = "rootvg-tessellation"
version = "0.2.1"
description = "Tessellate paths into a RootVG mesh primitive"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["gradient"]
gradient = ["rootvg-core/gradient", "rootvg-mesh/gradient"]
serde = ["dep:serde", "lyon/serialization", "rootvg-core/serde"]

[dependencies]
rootvg-core = { version = "0.2", path = "../rootvg-core", default-features = false }
rootvg-mesh = { version = "0.2", path = "../rootvg-mesh", default-features = false }
wgpu.workspace = true
thiserror.workspace = true
lyon = "1.0.1"
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }