[package]
name = "rootvg-tessellation"
version = "0.3.0"
description = "Tessellate paths into a RootVG mesh primitive"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["gradient", "web-colors"]
gradient = ["rootvg-core/gradient", "rootvg-mesh/gradient"]
serde = ["dep:serde", "lyon/serialization", "rootvg-core/serde"]
# Enables broken "sRGB linear" blending to reproduce color management of the Web.
# Recommended for better text legibility.
# See: https://github.com/iced-rs/iced/pull/1888
#      https://github.com/pop-os/cosmic-text/issues/195
web-colors = ["rootvg-core/web-colors", "rootvg-mesh/web-colors"]

[dependencies]
rootvg-core = { version = "0.3", path = "../rootvg-core", default-features = false }
rootvg-mesh = { version = "0.3", path = "../rootvg-mesh", default-features = false }
wgpu.workspace = true
thiserror.workspace = true
lyon = "1.0.1"
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }