[package]
name = "rootvg-text"
version = "0.2.1"
description = "Text primitive for RootVG"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["svg-icons"]
serde = ["rootvg-core/serde"]
svg-icons = ["dep:resvg", "glyphon/custom-glyphs"]
svg-icon-raster-images = ["svg-icons", "resvg/raster-images"]

[dependencies]
rootvg-core = { version = "0.2", path = "../rootvg-core", default-features = false }
wgpu.workspace = true
thiserror.workspace = true
bytemuck.workspace = true
smallvec.workspace = true
rustc-hash.workspace = true
glyphon = { git = "https://github.com/grovesNL/glyphon", rev = "c819d8c952b850e7993f0007d807a5da301ef799" }
resvg = { version = "0.42", default-features = false, optional = true }